--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="view">
             <input type="checkbox" class="toggle">
             <label>1</label>
-            <!-- <button class="destroy"></button> -->
+            <button class="destroy">X</button>
           </div>
         </li>
       </ul>
