完成网页布局

--- a/test.html
+++ b/test.html
@@ -8,22 +8,23 @@
 </head>
 
 <body>
-  <div>
+  <!-- <div>
     <input id="input" type="checkbox"> <label id="label" for="input">点我</label>
-  </div>
+  </div> -->
+  <div style="cursor: pointer;">111</div>
 </body>
 
 <script>
-  var inputELe = document.getElementById('input'); //input元素
-  var labelEle = document.getElementById('label'); //label元素
-  inputELe.addEventListener('click', function (e) { //给label添加事件　　　　　
-    // alert('我被点了');
-    if (inputELe.checked) { //如果当前是选中状态
-      inputELe.checked = false //置为false
-    } else {
-      inputELe.checked = true //否则置为true
-    }
-  });
+  // var inputELe = document.getElementById('input'); //input元素
+  // var labelEle = document.getElementById('label'); //label元素
+  // inputELe.addEventListener('click', function (e) { //给label添加事件
+  //   // alert('我被点了');
+  //   if (inputELe.checked) { //如果当前是选中状态
+  //     inputELe.checked = false //置为false
+  //   } else {
+  //     inputELe.checked = true //否则置为true
+  //   }
+  // });
 </script>
 
 </html>
