完成输入框输入功能

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         反转所有事项的完成情况
       </label>
       <ul class="list">
-        <li>
+        <!-- <li data-id="">
           <div class="view">
             <input type="checkbox" class="toggle">
             <label>1</label>
             <button class="destroy">X</button>
           </div>
-        </li>
+        </li> -->
       </ul>
       <footer class="footer">
         <span class="todo-count">2 items left</span>
@@ -46,6 +46,7 @@
     const styleSheets = document.styleSheets[1];
     styleSheets.insertRule(`.box::after { background-color: green }`, styleSheets.cssRules.length)
   </script> -->
+  <script src="./js/index.js"></script>
 </body>
 
 </html>
