实现左下角数量显示

--- a/test.html
+++ b/test.html
@@ -15,6 +15,13 @@
 </body>
 
 <script>
+  // let obj = {
+  //   //如果当前数组的最后一个元素的id存在则当前元素id相对其+1，反之为0
+  //   title: 11,
+  //   completed: false
+  // }
+  // localStorage.setItem('d', JSON.stringify(obj))
+  // console.log(localStorage.getItem('d'));
   // var inputELe = document.getElementById('input'); //input元素
   // var labelEle = document.getElementById('label'); //label元素
   // inputELe.addEventListener('click', function (e) { //给label添加事件
