--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       <footer class="footer">
         <span class="todo-count">2 items left</span>
         <ul class="filters">
-          <li><a href="#" class="selected">All</a></li>
-          <li><a href="#/active">Active</a></li>
-          <li><a href="#/completed">Completed</a></li>
+          <li><a href="#All" class="All selected">All</a></li>
+          <li><a href="#Active" class="Active">Active</a></li>
+          <li><a href="#Completed" class="Completed">Completed</a></li>
         </ul>
         <button class="clear-completed">Clear completed</button>
       </footer>
