--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
       </footer>
     </section>
   </section>
+  <footer class="info">
+    <p>Double-click to edit a todo</p>
+    <p>Written by WeiFeng Zhang</p>
+  </footer>
   <script src="./js/index.js"></script>
 </body>
 
